cmake_minimum_required(VERSION 3.20)

project(orcaSDK_tutorials)

find_package(orcaSDK REQUIRED)
add_subdirectory(helpers)

#Begin adding tutorials here
add_subdirectory(01_HelloWorld_ReadPosition)
add_subdirectory(02_ReadOrcaMode)
add_subdirectory(03_TriggerKinematicMotions)
add_subdirectory(04_SDKErrorHandling)
add_subdirectory(05_MotorErrorHandling)
add_subdirectory(06_LogPosition)
add_subdirectory(07_CommandStream)
add_subdirectory(08_ForceControl)
add_subdirectory(09_HapticControl)
add_subdirectory(10_HighSpeedCommunication)
add_subdirectory(11_HighSpeedPositionControl)
add_subdirectory(12_AutoZeroing)